--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,32 @@ body {
     background-color: black;
 }
 
+#game-over-window {
+    position: absolute;
+    width: 800px;
+    height: 500px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.37);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    visibility: hidden;
+    z-index: 99999;
+    border-radius: 20px;
+    box-shadow: black 3px 3px 11px 3px;
+}
+
+#game-over-window img {
+    height: 150px;
+}
+#btn-play:hover {
+    opacity: 0.8;
+    scale:1.1;
+}
+
 #background {
     width: 90vw;
     height: 90vh;
