Changed enemy and player sprites

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.37);
+    background-color: rgba(250, 26, 26, 0.34);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -44,15 +44,11 @@ body {
     /* Add other styles as desired */
 }
 
-.touch{
-    background: blue;
-}
-#btn-play{
-    background: red;
-}
+
 #btn-play:hover {
     opacity: 0.8;
     scale:1.1;
+    animation-delay: .1s;
 }
 
 #background {
@@ -67,10 +63,10 @@ body {
 
 .box-player {
     position: absolute;
-    width: 120px;
-    height: 120px;
+    width: 180px;
+    height: 180px;
     /* background-image: url('../img/Idle\ \(1\).png'); */
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-color: black;
     bottom: 70px;
@@ -80,10 +76,10 @@ body {
 }
 .box-enemy {
     position: absolute;
-    width: 120px;
-    height: 120px;
+    width: 160px;
+    height: 160px;
     /* background-image: url('../img/Idle\ \(1\).png'); */
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-color: black;
     bottom: 70px;
